; ModuleID = '/home/carl/AnghaBench/git/extr_submodule.c_fetch_task_release.c'
source_filename = "/home/carl/AnghaBench/git/extr_submodule.c_fetch_task_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fetch_task = type { i64, i32*, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fetch_task*)* @fetch_task_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fetch_task_release(%struct.fetch_task* %0) #0 {
  %2 = alloca %struct.fetch_task*, align 8
  store %struct.fetch_task* %0, %struct.fetch_task** %2, align 8
  %3 = load %struct.fetch_task*, %struct.fetch_task** %2, align 8
  %4 = getelementptr inbounds %struct.fetch_task, %struct.fetch_task* %3, i32 0, i32 2
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %13

7:                                                ; preds = %1
  %8 = load %struct.fetch_task*, %struct.fetch_task** %2, align 8
  %9 = getelementptr inbounds %struct.fetch_task, %struct.fetch_task* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  %11 = bitcast i32* %10 to i8*
  %12 = call i32 @free(i8* %11)
  br label %13

13:                                               ; preds = %7, %1
  %14 = load %struct.fetch_task*, %struct.fetch_task** %2, align 8
  %15 = getelementptr inbounds %struct.fetch_task, %struct.fetch_task* %14, i32 0, i32 2
  store i64 0, i64* %15, align 8
  %16 = load %struct.fetch_task*, %struct.fetch_task** %2, align 8
  %17 = getelementptr inbounds %struct.fetch_task, %struct.fetch_task* %16, i32 0, i32 1
  store i32* null, i32** %17, align 8
  %18 = load %struct.fetch_task*, %struct.fetch_task** %2, align 8
  %19 = getelementptr inbounds %struct.fetch_task, %struct.fetch_task* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %27

22:                                               ; preds = %13
  %23 = load %struct.fetch_task*, %struct.fetch_task** %2, align 8
  %24 = getelementptr inbounds %struct.fetch_task, %struct.fetch_task* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = call i32 @repo_clear(i64 %25)
  br label %27

27:                                               ; preds = %22, %13
  %28 = load %struct.fetch_task*, %struct.fetch_task** %2, align 8
  %29 = getelementptr inbounds %struct.fetch_task, %struct.fetch_task* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = call i32 @FREE_AND_NULL(i64 %30)
  ret void
}

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @repo_clear(i64) #1

declare dso_local i32 @FREE_AND_NULL(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
